--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     <string name="recordingResultText">音频识别结果：</string>
     
     <!-- 自定义组件 -->
-    <string name="pull_to_refresh">下拉可以刷新</string>
-    <string name="release_to_refresh">松开可以刷新</string>
+    <string name="pull_to_refresh_list">下拉可以刷新</string>
+    <string name="release_to_refresh_list">松开可以刷新</string>
     <string name="lastUpdateTime">最近更新：%s</string>
     <string name="load_full">已加载全部</string>
     <string name="no_data">暂无数据</string>
@@ -114,5 +114,8 @@
     <string name="back">返回</string>
     <string name="forget_pwd">找回密码</string>
     <string name="empty_notebooklist_tips">NoteBook is empty</string>
+
+    <string name="share_from_hanvon">来自汉王云记忆的分享</string>
+    <string name="link_mess">生成连接中，请等待...</string>
 
 </resources>
